# historia

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.prod.yaml  config.yaml
.github/workflows/: backend.yaml
deployment/: deployment.yaml  persistentvolumeclaim.yaml
src/: attendance.rs  config.rs  init_tracing.rs  main.rs  moodle.rs  moodle_extender.rs  reqwest_span_backend.rs  storage.rs  time_trace.rs
src/router/: channel_post.rs  commands.rs  mod.rs
src/teloxide_tracing/: hack.rs  mod.rs
