[package]
name = "historia"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dptree = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
teloxide = { version = "0.12.0", features = ["macros"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
