[package]
name = "historia"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dptree = "0.3.0"
futures = "0.3.25"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
teloxide = { version = "0.12.0", features = ["macros", "trace-adaptor", "throttle"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
