[package]
name = "historia"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
camino = "1.1.2"
dptree = "0.3.0"
email_address = "0.2.4"
futures = "0.3.25"
governor = "0.5.1"
html-escape = "0.2.13"
humantime-serde = "1.1.1"
once_cell = "1.17.0"
regex = "1.7.1"
reqwest = "0.11.14"
reqwest-middleware = "0.2.0"
reqwest-tracing = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.17"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
task-local-extensions = "0.1.3"
teloxide = { version = "0.12.0", features = ["macros", "trace-adaptor", "throttle"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
urlencoding = "2.1.2"
